--- a/firstApp/app/src/main/res/drawable/form_input1.xml
+++ b/firstApp/app/src/main/res/drawable/form_input1.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/LightRed" />
-    <corners android:radius="6dp" />
+    <solid android:color="@color/LightWhite" />
+    <corners android:radius="5dp" />
 
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="@color/LightGray" />
 
 </shape>
