--- a/firstApp/app/src/main/res/layout/activity_main.xml
+++ b/firstApp/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,17 @@
         android:id="@+id/imageView1"
         android:layout_width="50dp"
         android:layout_height="30dp"
-        android:src="@drawable/time"
+        android:src="@drawable/time2"
+        android:tint="@color/black"
         android:layout_margin="20dp" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="60dp"
-        android:src="@drawable/battery"
+        android:src="@drawable/wifi"
         android:layout_margin="4dp"
+        android:tint="@color/black"
         android:layout_alignParentEnd="true"/>
 
     <ImageView
