--- a/firstApp/app/src/main/res/layout/activity_main2.xml
+++ b/firstApp/app/src/main/res/layout/activity_main2.xml
@@ -19,15 +19,28 @@
             android:id="@+id/timeIcon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/time"
+            android:tint="@color/black"
+            android:src="@drawable/time2"
+            android:layout_centerInParent="true"
             android:layout_alignParentStart="true" />
 
         <ImageView
+            android:id="@+id/camIcon"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:tint="@color/black"
+            android:src="@drawable/cam"
+            android:layout_centerInParent="true"/>
+
+        <ImageView
             android:id="@+id/batteryIcon"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:src="@drawable/battery"
-            android:layout_alignParentEnd="true" />
+            android:layout_width="115dp"
+            android:layout_height="65dp"
+            android:tint="@color/black"
+            android:layout_centerInParent="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="-4dp"
+            android:src="@drawable/wifi" />
 
     </RelativeLayout>
 
