--- a/firstApp/app/src/main/res/layout/activity_main5.xml
+++ b/firstApp/app/src/main/res/layout/activity_main5.xml
@@ -13,8 +13,7 @@
         android:layout_weight="1"
         android:paddingTop="16dp"
         android:gravity="center_vertical"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
+        android:paddingStart="20dp">
 
         <ImageView
             android:id="@+id/timeIcon"
@@ -48,7 +47,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.9"
         android:paddingTop="16dp">
 
         <ImageView
@@ -102,7 +101,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.2"
+        android:layout_weight="2.4"
         android:paddingTop="16dp">
 
         <HorizontalScrollView
@@ -335,6 +334,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/LightGray"
+            android:layout_marginBottom="5dp"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center_vertical" />
     </RelativeLayout>
@@ -342,7 +342,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.3"
+        android:layout_weight="1.2"
         android:paddingTop="16dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
@@ -419,7 +419,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="2.2"
         android:paddingStart="20dp"
         android:paddingEnd="20dp">
 
@@ -435,8 +435,8 @@
 
         <ImageView
             android:id="@+id/comment"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/img6"
             android:layout_marginStart="7dp"
             android:layout_marginTop="10dp"
@@ -588,14 +588,14 @@
 
         <ImageView
             android:id="@+id/homeIcon2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/img9"
-            android:layout_toEndOf="@id/homeIcon"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
             android:layout_below="@id/line"
-            android:layout_marginTop="18dp"
-            android:tint="@color/Red"
-            android:layout_marginStart="46dp"/>
+            android:layout_marginStart="49dp"
+            android:layout_marginTop="22dp"
+            android:layout_toEndOf="@id/homeIcon"
+            android:src="@drawable/img9"
+            android:tint="@color/Red" />
 
         <ImageView
             android:id="@+id/homeIcon3"
